# SPDX-FileCopyrightText: Copyright (c) 202 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: MIT
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# DEALINGS IN THE SOFTWARE.


# Additional files that need to be included in the package distribution must be
# listed in the MANIFEST.in file.
#
# References:
# * https://newbedev.com/how-include-static-files-to-setuptools-python-package

[metadata]

# Configure specific project settings
name = megapose
author = Yann Labbe, Lucas Manuelli
description = Pose Estimation Library
author_email = yann.labbe@inria.fr, lmanuelli@nvidia.com
url = ""
license = MIT
version = 1.0

# Configure general project settings
long_description = file: README.md
long_description_content_type = text/markdown
license_files = ['LICENSE']


# List of classifiers can be found here:
# https://pypi.org/classifiers/
classifiers =
  License :: MIT
  Operating System :: OS Independent
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Robotics

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

[options]
install_requires =
  setuptools_scm>=6.4.2
  # (add additional dependencies here)
packages = find_namespace:
package_dir =
  = src
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
ci =
  anybadge==1.8.0
  black==22.6.0
  build==0.7.0
  graphviz==0.19.1
  flake8==4.0.1
  flake8-copyright==0.2.2
  flake8-docstrings==1.6.0
  flake8-isort==4.1.1
  mypy==0.931
  pytest==6.2.5
  pytest-cov==3.0.0
  sphinx==4.3.0
  sphinx_rtd_theme==1.0.0
  twine==3.7.1

dev =
  ipdb
  ipython
  jupyter

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = package.module:function


[flake8]
select = E,F,W,C,D,I
copyright-check = False
max-line-length = 100
docstring-convention = google
exclude = .git,build,deprecated,dist,venv
ignore =
  W503 # (this is deprecated see: https://lintlyci.github.io/Flake8Rules/rules/W503.html)
  E203 # (to be Black compatible)
  E731 # (ignore recommendation to not use lambdas because there is no other way to write a single line function with out warnings)
